<resources>
    <string name="app_name">BookFinder</string>

    <string name="next">Next</string>
    <string name="find_a_book">Find a book</string>
    <string name="find_books_by_an_author">Find books by an author</string>
    <string name="find_a_series_by_an_author">Find series by an author</string>
    <string name="read_about_an_author">Find an author</string>
    <string name="title_navdrawertrial_list">Items</string>
    <string name="title_navdrawertrial_detail">NavDrawerTrial Detail</string>
    <string name="title_activity_nav_drawer_trial">NavDrawerTrial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="books_author">Books by an Author</string>
    <string name="series_author">Series by an Author</string>
    <string name="author">Find an Author</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_edittxt">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="book_title">Book Title/Author</string>
    <string name="downloads">Downloads</string>
    <string name="no_downloads">No Downloads</string>


</resources>
