<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.beatrice.bookfinder.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/booksFragment"
        android:name="com.beatrice.bookfinder.BooksFragment"
        android:label="@string/books_author"
        tools:layout="@layout/fragment_books" />
    <fragment
        android:id="@+id/seriesFragment"
        android:name="com.beatrice.bookfinder.SeriesFragment"
        android:label="@string/series_author"
        tools:layout="@layout/fragment_series" />
    <fragment
        android:id="@+id/authorFragment"
        android:name="com.beatrice.bookfinder.AuthorFragment"
        android:label="@string/author"
        tools:layout="@layout/fragment_author" />
</navigation>