<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/header_txtview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_padding"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="normal"
        android:gravity="center_horizontal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_textinputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_edittxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_edittxt"
            android:padding="@dimen/text_padding" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_textinputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_editxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="@dimen/text_padding" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp" />






</LinearLayout>